# sample

./: .gitignore  README.md
Angular/CropperJS/: README.md  angular.json  package-lock.json  package.json
Angular/CropperJS/src/: styles.scss
Angular/Dashboards/Metronic/: README.md  angular.json  karma.conf.js  package.json
Angular/Highcharts/: README.md  angular.json  karma.conf.js  package.json
Angular/RefFunc/: README.md  angular.json  karma.conf.js  package.json
Angular/RefFunc/src/: index.html  styles.scss
BabylonJS/test-01/: workspace.editorworkspace
Devops/Gitlab/: .gitignore  docker-compose.yml  reset-password.md  runner-config.toml
Devops/Registery/: docker-compose.yml
JavaScript/SidebarScroll/: index-2.html  index.html  main-2.js  main.js
ORM/Prisma/: .env.development  .env.test  README.md  schema.prisma  seed-data.ts  seed.ts
SCSS/: package.json
SCSS/src/: 01-Roules.scss  03-Variables.scss
ThreeJS/mk7-4d/: env.config.js  package.json  tsconfig.json  webpack.config.dev.js
__Template/next-js/: iis-publish.md
__Template/react-ts-scss-webpack/: README.md  package.json  tsconfig.json
minio/: package.json
rust/samples/: Cargo.toml  config
rust/samples/src/: 01_print_fmt.rs  02_variables.rs  main.rs  r01_print_fmt.rs  r02_variables.rs  r03_strings.rs  r04_compound_types.rs  r05_vector.rs  r06_functions.rs  r07_statements.rs  r08_structures.rs  r09_generics.rs  r10_hash_map.rs  r11_lifetime.rs
rust/samples/src/common/: mod.rs
rust/samples/src/common/utils/: mod.rs
rust/school/: Cargo.toml  Dockerfile  Dockerfile-linux  README.md
(+90 files in other folders)
