[package]
name = "samples"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


# [profile.release]
# opt-level = 'z'     # Optimize for size. There is also opt-level = "z" available to reduce the resulting binary size. "s" and "z" can sometimes be smaller than the other, so test it with your application!
# lto = true          # Enable Link Time Optimization
# codegen-units = 1   # Reduce number of codegen units to increase optimizations.
# panic = 'abort'     # Abort on panic
# strip = true        # Strip symbols from binary*
